--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
       context: ./fastapi-app
       dockerfile: Dockerfile
     container_name: FastApi-app
-    command: uvicorn app.main:app --host 0.0.0.0 --port 5001
+    command: uvicorn fastapi_app.main:app --host 0.0.0.0 --port 5001
     ports:
       - "5001:5001"
