--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.7"
 
 services:
-  fastapi-app:
+  fastapi_app:
     build:
-      context: ./fastapi-app
+      context: ./fastapi_app
       dockerfile: Dockerfile
-    container_name: FastApi-app
+    container_name: FastApi_app
     command: uvicorn fastapi_app.main:app --host 0.0.0.0 --port 5001
     ports:
       - "5001:5001"
