--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3.7"
 
 services:
-  fastapi_app:
+  fastapi-app:
     build:
-      context: ./fastapi_app
+      context: ./fastapi-app
       dockerfile: Dockerfile
-    container_name: FastApi_app
-    command: uvicorn fastapi_app.main:app --host 0.0.0.0 --port 5001
+    container_name: FastApi-app
     ports:
       - "5001:5001"
