--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - "5001:5001"
     networks:
       - loadtest-net
+    depends_on:
+      - loki
+    environment:
+      - LOKI_ENDPOINT=http://loki:3100/loki/api/v1/push
 
   sonarqube:
     image: sonarqube:latest
@@ -103,6 +107,12 @@ services:
       - INFLUXDB_DB=jmeter
     networks:
       - loadtest-net
+
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"  
 
 networks:
   loadtest-net:
